--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -53,13 +53,10 @@ jobs:
           # git clone https://github.com/qq523407234/luci-app-udp2raw package/luci-app-udp2raw
           
           # v2ray
-          git clone https://github.com/kuoruan/openwrt-v2ray package/v2ray-core
+          git clone --branch v4.20.0-4 https://github.com/kuoruan/openwrt-v2ray package/v2ray-core
           git clone https://github.com/kuoruan/luci-app-v2ray package/luci-app-v2ray
           # upx压缩等级改为速度最优的 compress faster
           sed -i 's/--ultra-brute/-1/g' package/v2ray-core/Makefile
-          # 版本改为 4.20.0
-          sed -i 's/4.21.3/4.20.0/g' package/v2ray-core/Makefile
-          sed -i 's/2052ea02ec5569b32748e5c859dcd066fa3818d5caafa70ddaf216576aaec188/579a7098b8f6cc68c3f94c5453fa274299f8b072736f364654298bd4cf57d24e/g' package/v2ray-core/Makefile
 
           # # OpenAppFilter
           # git clone https://github.com/destan19/OpenAppFilter package/OpenAppFilter
