--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -31,8 +31,10 @@ jobs:
 
       - name: 下载SDK
         env:
-          SDK_NAME: openwrt-sdk-19.07.0-rc2-bcm53xx_gcc-7.5.0_musl_eabi.Linux-x86_64
-          SDK_URL: https://downloads.openwrt.org/releases/19.07.0-rc2/targets/bcm53xx/generic
+          # SDK_NAME: openwrt-sdk-19.07.0-rc2-bcm53xx_gcc-7.5.0_musl_eabi.Linux-x86_64
+          # SDK_URL: https://downloads.openwrt.org/releases/19.07.0-rc2/targets/bcm53xx/generic
+          SDK_NAME: openwrt-sdk-19.07.2-bcm53xx_gcc-7.5.0_musl_eabi.Linux-x86_64
+          SDK_URL: https://downloads.openwrt.org/releases/19.07.2/targets/bcm53xx/generic
         run: |
           wget -q ${SDK_URL}/${SDK_NAME}.tar.xz
           xz -d ${SDK_NAME}.tar.xz
@@ -67,8 +69,13 @@ jobs:
           # svn checkout https://github.com/coolexa/smartdns-lite/trunk/package/openwrt package/smartdns
           # git clone https://github.com/coolexa/luci-app-smartdns package/luci-app-smartdns
 
-          # trojan
-          git clone https://github.com/coolexa/openwrt-trojan package/openwrt-trojan
+          # # trojan
+          # git clone https://github.com/coolexa/openwrt-trojan package/openwrt-trojan
+
+          # luci-app-passwall
+          cat >> feeds.conf.default <<EOF
+          src-git lienol https://github.com/Lienol/openwrt-package
+          EOF
 
       - name: 构建编译扩展环境
         run: |
@@ -106,8 +113,12 @@ jobs:
           # CONFIG_V2RAY_COMPRESS_UPX=y
           # EOF
 
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_trojan=m
+          # EOF
+
           cat >> .config <<EOF
-          CONFIG_PACKAGE_trojan=m
+          CONFIG_PACKAGE_luci-app-passwall=y
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
@@ -142,10 +153,15 @@ jobs:
       #     make package/v2ray-core/compile -j$(nproc) V=s
       #     # make package/luci-app-v2ray/compile -j$(nproc) V=s
 
-      - name: 进行编译-6
+      # - name: 进行编译-6
+      #   run: |
+      #     cd openwrt   
+      #     make package/trojan/compile -j$(nproc)
+
+      - name: 进行编译-7
         run: |
           cd openwrt   
-          make package/trojan/compile -j$(nproc)
+          make package/feeds/lienol/luci-app-passwall/compile -j$(nproc)
 
       # - name: 简单清理
       #   run: |
@@ -161,7 +177,7 @@ jobs:
       - name: 提取ipk
         run: |
           mkdir -p ./ipk/
-          find ./openwrt/bin/ -name "*trojan*.ipk" | xargs -i mv -f {} ./ipk/
+          find ./openwrt/bin/ -name "*.ipk" | xargs -i mv -f {} ./ipk/
 
       - name : 上传ipk
         uses: actions/upload-artifact@master
