--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -122,7 +122,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Server is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
-          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun is not set
